johnlimadev/force-app/main/default/objects/Message__c/fields/Descriptive_Label__c.field-meta.xml
<CustomField>
    <fullName>Descriptive_Label__c</fullName>
    <formula>Name + &apos;, &apos; + &apos;Case: &apos; + Case__r.CaseNumber + &apos;, Stage: &apos; +  TEXT(Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descriptive Label</label>
    <type>Text</type>
</CustomField>