johnlimadev/force-app/main/default/objects/Message__c/fields/Mock_Approver__c.field-meta.xml
<CustomField>
    <fullName>Mock_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mock Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>